docs: update intro

--- a/app/docs/page.mdx
+++ b/app/docs/page.mdx
@@ -10,18 +10,18 @@ Motion-Primitives is a project dedicated to showcasing animated components built
 
 As a developer keen on growing my skills in animation and motion design, I often found it challenging to find practical, high-quality code examples of animated components that were not just theoretical but also applicable to real-world projects. This gap inspired me to create Motion-Primitives.
 
-### Bridge the gap
+### Ready-to-use components
 
-Provide ready-to-use, documented with examples, web animations that can be implemented and customized for various web projects.
-
-### Learning by doing
-
-Each component serves as a learning tool, enabling exploration of the capabilities and creative potential of motion within user interfaces.
+All components are fully documented with examples, ready for implementation and customization across various projects.
 
 ### Community contribution
 
-With an open-source approach, Motion-Primitives strives to build a diverse and rich collection of animated components that can be utilized by anyone in the development and design community.
+With an open-source approach, Motion-Primitives strives to build a diverse, free and open collection of animated components.
 
-### Unstyled
+### Style flexibility
 
-Each components starts with a styled version, but the ultimate goal is to find a way to provide an unstyled version that can be easily integrated into any project.
+Starting with styled versions during the beta phase, with plans to offer unstyled alternatives that can easily integrate into any existing design system or theme.
+
+### Accesible
+
+Ensuring that all components meet high accessibility standards, making them usable for everyone. We are thinking about using radix-ui or shadcn/ui for each component.
