docs: add metadata

--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  title: "Dialog - Motion-Primitives",
+  description:
+    "Display content in a focused view with smooth transitions. Ideal for showcasing details like images and texts in a prominent overlay.",
+};
+
 import Dialog from "@/components/core/dialog";
 import ComponentCodePreview from "@/components/website/component-code-preview";
 
