--- a/app/docs/toolbar-dynamic/page.mdx
+++ b/app/docs/toolbar-dynamic/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  title: "Toolbar Dynamic - Motion-Primitives",
+  description:
+    "Adjusts width dynamically to accommodate varying tool requirements. Starts small and expands to offer more tools as needed.",
+};
+
 import ToolbarDynamic from "@/components/core/toolbar-dynamic";
 import ComponentCodePreview from "@/components/website/component-code-preview";
 
