--- a/app/docs/toolbar-expandable/page.mdx
+++ b/app/docs/toolbar-expandable/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  title: "Toolbar Expandable - Motion-Primitives",
+  description:
+    "Changes height based on content, expanding to display more tools and shrinking to save space. Keeps your screen organized and efficient.",
+};
+
 import ToolbarExpandable from "@/components/core/toolbar-expandable";
 import ComponentCodePreview from "@/components/website/component-code-preview";
 
