--- a/app/docs/popover/page.mdx
+++ b/app/docs/popover/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  title: "Popover - Motion-Primitives",
+  description:
+    "Display content in a focused view. Ideal for quick user interactions over existing content, easily dismissible with a click outside or close button.",
+};
+
 import Popover from "@/components/core/popover";
 import ComponentCodePreview from "@/components/website/component-code-preview";
 
