--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -3,6 +3,8 @@ import { AnimatedTabsHover } from "@/components/examples/animated-tabs-hover";
 import { AnimatedCardBackgroundHover } from "@/components/examples/animated-card-background-hover";
 import { SegmentedControl } from "@/components/examples/segmented-control";
 import ComponentCodePreview from "@/components/website/component-code-preview";
+import ComponentApi from "@/components/website/component-api";
+import CodeBlock from "@/components/website/code-block";
 
 # Animated Background
 
@@ -36,4 +38,57 @@ The `AnimatedBackground` component visually highlights selected items by sliding
 <ComponentCodePreview
   component={<SegmentedControl />}
   filePath="examples/segmented-control"
+/>
+
+## Code
+
+<CodeBlock filePath="components/core/animated-background.tsx" />
+
+## Component API
+
+<ComponentApi
+  lines={[
+    {
+      prop: "children",
+      type: `ReactElement<{ 'data-id': string }>[] | ReactElement<{ 'data-id': string }>`,
+      default: "",
+      description:
+        "The content to be displayed within the animated background. Each child must have a unique `data-id` attribute to ensure correct functionality.",
+    },
+    {
+      prop: "defaultValue",
+      type: "string",
+      default: "",
+      description:
+        "The default value to be used as the active item identifier.",
+    },
+    {
+      prop: "onValueChange",
+      type: "(newActiveId: string | null) => void",
+      default: "",
+      description:
+        "Callback function that is called when the active item changes.",
+    },
+    {
+      prop: "className",
+      type: "string",
+      default: "",
+      description:
+        "The class name to apply to the animated background for custom styling.",
+    },
+    {
+      prop: "transition",
+      type: "Transition",
+      default: "",
+      description:
+        "The transition effect from framer-motion to apply when changing the active item.",
+    },
+    {
+      prop: "enableHover",
+      type: "boolean",
+      default: "false",
+      description:
+        "Enables or disables the hover effect. When `enableHover` is true, spacing between children cannot be added.",
+    },
+  ]}
 />
