--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  title: "Animated background - Motion-Primitives",
+  description:
+    "Visually highlights selected items by sliding a background into view when hovered over or clicked. This smooth transition helps users focus on the active item, making it ideal for interactive lists, menus, navgiations where clear selection feedback is important.",
+};
+
 import { AnimatedTabs } from "@/components/examples/animated-tabs";
 import { AnimatedTabsHover } from "@/components/examples/animated-tabs-hover";
 import { AnimatedCardBackgroundHover } from "@/components/examples/animated-card-background-hover";
