fix: make tables scrollable on mobile

--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -26,6 +26,7 @@ Easy way to switch between different pieces of content with enter and exit anima
 ### Card with Transition Panel
 
 <ComponentCodePreview
+  classNameComponentContainer="p-4"
   component={<TransitionPanelCard />}
   filePath="examples/transition-panel-card"
 />
