feat: add prettier config, apply formatting across the project

--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -1,15 +1,15 @@
 export const metadata = {
-  title: "Animated background - Motion-Primitives",
+  title: 'Animated background - Motion-Primitives',
   description:
-    "Visually highlights selected items by sliding a background into view when hovered over or clicked. This smooth transition helps users focus on the active item, making it ideal for interactive lists, menus, navgiations where clear selection feedback is important.",
+    'Visually highlights selected items by sliding a background into view when hovered over or clicked. This smooth transition helps users focus on the active item, making it ideal for interactive lists, menus, navgiations where clear selection feedback is important.',
 };
 
-import { AnimatedTabs } from "@/components/examples/animated-tabs";
-import { AnimatedTabsHover } from "@/components/examples/animated-tabs-hover";
-import { AnimatedCardBackgroundHover } from "@/components/examples/animated-card-background-hover";
-import { SegmentedControl } from "@/components/examples/segmented-control";
-import ComponentCodePreview from "@/components/website/component-code-preview";
-import CodeBlock from "@/components/website/code-block";
+import { AnimatedTabs } from '@/components/examples/animated-tabs';
+import { AnimatedTabsHover } from '@/components/examples/animated-tabs-hover';
+import { AnimatedCardBackgroundHover } from '@/components/examples/animated-card-background-hover';
+import { SegmentedControl } from '@/components/examples/segmented-control';
+import ComponentCodePreview from '@/components/website/component-code-preview';
+import CodeBlock from '@/components/website/code-block';
 
 # Animated Background
 
@@ -21,33 +21,33 @@ The `AnimatedBackground` component visually highlights selected items by sliding
 
 <ComponentCodePreview
   component={<AnimatedTabs />}
-  filePath="examples/animated-tabs"
+  filePath='examples/animated-tabs'
 />
 
 ### Animated Tabs Hover
 
 <ComponentCodePreview
   component={<AnimatedTabsHover />}
-  filePath="examples/animated-tabs-hover"
+  filePath='examples/animated-tabs-hover'
 />
 
 ### Animated Card Background
 
 <ComponentCodePreview
   component={<AnimatedCardBackgroundHover />}
-  filePath="examples/animated-card-background-hover"
+  filePath='examples/animated-card-background-hover'
 />
 
 ### Segmented Control
 
 <ComponentCodePreview
   component={<SegmentedControl />}
-  filePath="examples/segmented-control"
+  filePath='examples/segmented-control'
 />
 
 ## Code
 
-<CodeBlock filePath="components/core/animated-background.tsx" />
+<CodeBlock filePath='components/core/animated-background.tsx' />
 
 ## Component API
 
