--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -1,14 +1,14 @@
 export const metadata = {
-  title: "Dialog - Motion-Primitives",
+  title: 'Dialog - Motion-Primitives',
   description:
-    "Display content in a focused view with smooth transitions. Ideal for showcasing details like images and texts in a prominent overlay.",
+    'Display content in a focused view with smooth transitions. Ideal for showcasing details like images and texts in a prominent overlay.',
 };
 
-import Dialog from "@/components/core/dialog";
-import ComponentCodePreview from "@/components/website/component-code-preview";
+import Dialog from '@/components/core/dialog';
+import ComponentCodePreview from '@/components/website/component-code-preview';
 
 # Dialog
 
 A dialog that smoothly transitions content into a focused view using layout animations. It's perfect for showcasing details like images and texts in a more prominent, centered overlay. The dialog is easy to manage with click-outside and escape key functionalities to close.
 
-<ComponentCodePreview component={<Dialog />} filePath="core/dialog" />
+<ComponentCodePreview component={<Dialog />} filePath='core/dialog' />
