--- a/app/docs/toolbar-dynamic/page.mdx
+++ b/app/docs/toolbar-dynamic/page.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "Toolbar Dynamic - Motion-Primitives",
+  title: 'Toolbar Dynamic - Motion-Primitives',
   description:
-    "Adjusts width dynamically to accommodate varying tool requirements. Starts small and expands to offer more tools as needed.",
+    'Adjusts width dynamically to accommodate varying tool requirements. Starts small and expands to offer more tools as needed.',
 };
 
-import ToolbarDynamic from "@/components/core/toolbar-dynamic";
-import ComponentCodePreview from "@/components/website/component-code-preview";
+import ToolbarDynamic from '@/components/core/toolbar-dynamic';
+import ComponentCodePreview from '@/components/website/component-code-preview';
 
 # Toolbar Dynamic
 
@@ -13,5 +13,5 @@ A toolbar that adjusts its width based on what you need to do. It starts small a
 
 <ComponentCodePreview
   component={<ToolbarDynamic />}
-  filePath="core/toolbar-dynamic"
+  filePath='core/toolbar-dynamic'
 />
