--- a/app/docs/toolbar-expandable/page.mdx
+++ b/app/docs/toolbar-expandable/page.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "Toolbar Expandable - Motion-Primitives",
+  title: 'Toolbar Expandable - Motion-Primitives',
   description:
-    "Changes height based on content, expanding to display more tools and shrinking to save space. Keeps your screen organized and efficient.",
+    'Changes height based on content, expanding to display more tools and shrinking to save space. Keeps your screen organized and efficient.',
 };
 
-import ToolbarExpandable from "@/components/core/toolbar-expandable";
-import ComponentCodePreview from "@/components/website/component-code-preview";
+import ToolbarExpandable from '@/components/core/toolbar-expandable';
+import ComponentCodePreview from '@/components/website/component-code-preview';
 
 # Toolbar Dynamic
 
@@ -13,5 +13,5 @@ A toolbar that changes its height as needed. It grows to show more content and s
 
 <ComponentCodePreview
   component={<ToolbarExpandable />}
-  filePath="core/toolbar-expandable"
+  filePath='core/toolbar-expandable'
 />
