--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -1,13 +1,13 @@
 export const metadata = {
-  title: "Transition Panel - Motion-Primitives",
+  title: 'Transition Panel - Motion-Primitives',
   description:
     "Easy way to switch between different pieces of content with enter and exit animations. It's perfect for enhancing user experience in areas such as onboarding card, settings adjustments, or any interactive content that requires a visual transition between states.",
 };
 
-import { TabsTransitionPanel } from "@/components/examples/transition-panel-tabs";
-import { TransitionPanelCard } from "@/components/examples/transition-panel-card";
-import ComponentCodePreview from "@/components/website/component-code-preview";
-import CodeBlock from "@/components/website/code-block";
+import { TabsTransitionPanel } from '@/components/examples/transition-panel-tabs';
+import { TransitionPanelCard } from '@/components/examples/transition-panel-card';
+import ComponentCodePreview from '@/components/website/component-code-preview';
+import CodeBlock from '@/components/website/code-block';
 
 # Transition Panel
 
@@ -18,22 +18,22 @@ Easy way to switch between different pieces of content with enter and exit anima
 ### Tabs with Transition Panel
 
 <ComponentCodePreview
-  classNameComponentContainer="p-20"
+  classNameComponentContainer='p-20'
   component={<TabsTransitionPanel />}
-  filePath="examples/transition-panel-tabs"
+  filePath='examples/transition-panel-tabs'
 />
 
 ### Card with Transition Panel
 
 <ComponentCodePreview
-  classNameComponentContainer="p-4"
+  classNameComponentContainer='p-4'
   component={<TransitionPanelCard />}
-  filePath="examples/transition-panel-card"
+  filePath='examples/transition-panel-card'
 />
 
 ## Code
 
-<CodeBlock filePath="components/core/transition-panel.tsx" />
+<CodeBlock filePath='components/core/transition-panel.tsx' />
 
 ## Component API
 
