--- a/app/docs/popover/page.mdx
+++ b/app/docs/popover/page.mdx
@@ -1,14 +1,14 @@
 export const metadata = {
-  title: "Popover - Motion-Primitives",
+  title: 'Popover - Motion-Primitives',
   description:
-    "Display content in a focused view. Ideal for quick user interactions over existing content, easily dismissible with a click outside or close button.",
+    'Display content in a focused view. Ideal for quick user interactions over existing content, easily dismissible with a click outside or close button.',
 };
 
-import Popover from "@/components/core/popover";
-import ComponentCodePreview from "@/components/website/component-code-preview";
+import Popover from '@/components/core/popover';
+import ComponentCodePreview from '@/components/website/component-code-preview';
 
 # Popover
 
 A simple popover for quick user interactions over existing content. It pops up on command, and closes easily with a click outside or on a close button.
 
-<ComponentCodePreview component={<Popover />} filePath="core/popover" />
+<ComponentCodePreview component={<Popover />} filePath='core/popover' />
