fix: dialog code exampels path

--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -21,12 +21,12 @@ A dialog that smoothly transitions content into a focused view using layout anim
 
 <ComponentCodePreview
   component={<DialogBasicTwo />}
-  filePath='examples/dialog-basic-1'
+  filePath='examples/dialog-basic-2'
 />
 
 <ComponentCodePreview
   component={<DialogBasicImage />}
-  filePath='examples/dialog-basic-1'
+  filePath='examples/dialog-image'
 />
 
 ## Examples
