feat: add in-view with examples

--- a/app/docs/cursor/page.mdx
+++ b/app/docs/cursor/page.mdx
@@ -32,7 +32,7 @@ A custom cursor component with optional spring animations. It can be globally ap
 
 <CodeBlock filePath='components/core/cursor.tsx' />
 
-### Cursor
+## Component API
 
 | Prop             | Type                                             | Default  | Description                                                                                                   |
 | :--------------- | :----------------------------------------------- | :------- | :------------------------------------------------------------------------------------------------------------ |
