feat : add Transition prop to the tab trigger

--- a/app/docs/tabs/page.mdx
+++ b/app/docs/tabs/page.mdx
@@ -62,11 +62,12 @@ An animated tab component
 
 ### Tabs Trigger
 
-| Prop      | Type      | Default | Description                                                  |
-| :-------- | :-------- | :------ | :----------------------------------------------------------- |
-| children  | ReactNode |         | The content elements of the Tabs                             |
-| tabId     | string    |         | The tabId of the trigger.                                    |
-| className | string    |         | Optional CSS class for styling the accordion item container. |
+| Prop       | Type       | Default | Description                                                                  |
+| :--------- | :--------- | :------ | :--------------------------------------------------------------------------- |
+| children   | ReactNode  |         | The content elements of the Tabs                                             |
+| tabId      | string     |         | The tabId of the trigger.                                                    |
+| className  | string     |         | Optional CSS class for styling the accordion item container.                 |
+| transition | Transition |         | The transition settings from framer-motion to control the animation effects. |
 
 ### Tabs Content
 
