docs : updating component description

--- a/app/docs/tabs/page.mdx
+++ b/app/docs/tabs/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Tabs - Motion-Primitives',
   description:
-    'Display content in a focused view. Ideal for quick user interactions over existing content, easily dismissible with a click outside or close button.',
+    'A versatile and interactive tab component featuring smooth animations powered. Customize vertical, horizontal, and controlled tab layouts for a dynamic user interface experience.',
 };
 
 import TabsVertical from '@/components/examples/tabs-vertical';
@@ -12,7 +12,7 @@ import CodeBlock from '@/components/website/code-block';
 
 # Tabs
 
-An animated tab component
+A versatile and interactive tab component featuring smooth animations powered. Customize vertical, horizontal, and controlled tab layouts for a dynamic user interface experience.
 
 ## Examples
 
