feat: add animated-group with examples

--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
   title: 'Animated Number - Motion-Primitives',
-  description: 'Animated number with a simple counter.',
+  description: 'Easily animate numbers.',
 };
 
 import { AnimatedNumber } from '@/components/core/animated-number';
