feat: add animated-group to navigation

--- a/app/docs/animated-group/page.mdx
+++ b/app/docs/animated-group/page.mdx
@@ -40,6 +40,7 @@ Images are from [cosmos - Impressionisme](https://www.cosmos.so/ibelick/impressi
   component={<AnimatedGroupCustomVariants2 />}
   filePath='examples/animated-group-custom-variants-2'
   hasReTrigger
+  classNameComponentContainer='bg-white'
 />
 
 ## Code
