Added credit for inspiration.

--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -13,6 +13,8 @@ import CodeBlock from '@/components/website/code-block';
 
 A versatile UI element that provides a flexible and customizable way to organize and display menu items within your application.
 
+- This component draws inspiration from a Magnified Dock implementation by [Build UI](https://buildui.com/recipes/magnified-dock)
+
 ## Examples
 
 ### Apple style dock
