updated Dock API descriptions

--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -43,21 +43,21 @@ A versatile UI element that provides a flexible and customizable way to organize
 
 ### DockItem
 
-| Prop      | Type      | Default   | Description                                                   |
-| :-------- | :-------- | :-------- | :------------------------------------------------------------ |
-| children  | ReactNode |           | Content of the trigger, typically a string or formatted text. |
-| className | string    | undefined | Optional CSS class for styling the trigger element.           |
+| Prop      | Type      | Default   | Description                                   |
+| :-------- | :-------- | :-------- | :-------------------------------------------- |
+| children  | ReactNode |           | DockLabel and DockIcon                        |
+| className | string    | undefined | Optional CSS class for styling the component. |
 
 ### DockLabel
 
-| Prop      | Type      | Default   | Description                                                   |
-| :-------- | :-------- | :-------- | :------------------------------------------------------------ |
-| children  | ReactNode |           | Content of the trigger, typically a string or formatted text. |
-| className | string    | undefined | Optional CSS class for styling the trigger element.           |
+| Prop      | Type      | Default   | Description                                                 |
+| :-------- | :-------- | :-------- | :---------------------------------------------------------- |
+| children  | ReactNode |           | Content of the label, typically a string or formatted text. |
+| className | string    | undefined | Optional CSS class for styling the component.               |
 
 ### DockIcon
 
-| Prop      | Type      | Default   | Description                                                   |
-| :-------- | :-------- | :-------- | :------------------------------------------------------------ |
-| children  | ReactNode |           | Content of the trigger, typically a string or formatted text. |
-| className | string    | undefined | Optional CSS class for styling the trigger element.           |
+| Prop      | Type      | Default   | Description                                   |
+| :-------- | :-------- | :-------- | :-------------------------------------------- |
+| children  | ReactNode |           | Icon                                          |
+| className | string    | undefined | Optional CSS class for styling the component. |
