Bug fix, add new DockContainer component

--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -31,6 +31,13 @@ A versatile UI element that provides a flexible and customizable way to organize
 
 ## Component API
 
+### DockContainer
+
+| Prop      | Type      | Default   | Description                                   |
+| :-------- | :-------- | :-------- | :-------------------------------------------- |
+| children  | ReactNode |           | Dock component                                |
+| className | string    | undefined | Optional CSS class for styling the component. |
+
 ### Dock
 
 | Prop          | Type          | Default                                      | Description                                                                              |
